--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0-rc01'
     implementation 'com.tiancaicc.springfloatingactionmenu:library:0.0.2'
     implementation 'org.litepal.android:core:2.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
